--- a/translations/nb.json
+++ b/translations/nb.json
@@ -1,5 +1,5 @@
 {
-  "appTittel": "Dine arbeidsavklaringspenger",
+  "appTittel": "Test av varsler",
   "sisteSøknad": {
     "heading": "Din siste søknad om arbeidsavklaringspenger",
     "søknad": {
